--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-native-screens": "^3.9.0",
     "react-native-select-dropdown": "^1.5.0",
     "react-native-svg": "^12.1.1",
-    "react-native-webview": "^11.14.2",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
+    "react-native-webview": "^11.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
